--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -1,11 +1,21 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito')
 
-// Variables
-@import 'variables'
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap'
 
-h1,h2,h3,h4,h5,h6
-    color: $red
+// All theme files
+@import "theme"
+
+@font-face
+    font-family: 'Noto Sans Regular'
+    src: url("../../public/webfonts/NotoSansTC-Regular.otf")
+
+@font-face
+    font-family: 'Noto Sans Medium'
+    src: url("../../public/webfonts/NotoSansTC-Medium.otf")
+
+@font-face
+    font-family: 'Open Sans'
+    src: url("../../public/webfonts/OpenSans-Regular.ttf")
+
