--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11327,6 +11327,507 @@ select.form-control:focus {
   border: 0;
 }
 
+.dashboard-sub-sidebar {
+  width: 64px;
+  background-color: #0052CC;
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  padding: 24px 0 24px 0;
+  z-index: 1;
+  box-shadow: inset -7px 0 9px -7px rgba(0, 0, 0, 0.4);
+}
+
+.dashboard-sub-sidebar .dashboard-sub-sidebar-container {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.dashboard-sub-sidebar .dashboard-sub-sidebar-container .dashboard-sub-top-content {
+  position: absolute;
+  width: 100%;
+  color: #FFFFFF;
+  top: 0;
+}
+
+.dashboard-sub-sidebar .dashboard-sub-sidebar-container .dashboard-sub-user-content {
+  position: absolute;
+  width: 100%;
+  color: #FFFFFF;
+  bottom: 0;
+}
+
+.dashboard-sub-sidebar .dashboard-sub-sidebar-container .dashboard-sub-user-content .dashboard-sub-sidebar-user-image {
+  cursor: pointer;
+  height: 24px;
+  width: 24px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+.dashboard-sub-sidebar .dashboard-sub-sidebar-container .dashboard-sub-user-content .dashboard-sub-help-block {
+  font-size: 18px;
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  line-height: 30px;
+}
+
+.dashboard-sub-sidebar .dashboard-sub-sidebar-container .dashboard-sub-user-content .dashboard-sub-help-block:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  border-radius: 50%;
+  margin: auto;
+  font-size: 18px;
+  background-color: #0368ff;
+}
+
+.sidebar-icon-box {
+  font-size: 18px;
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  line-height: 30px;
+}
+
+.sidebar-icon-box:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  border-radius: 50%;
+  margin: auto;
+  font-size: 18px;
+  background-color: #0368ff;
+}
+
+.dashboard-sidebar .slideout {
+  cursor: pointer;
+}
+
+.dashboard-sidebar .slideout .dashboard-sidebar-listitem:hover {
+  background-color: #0368ff;
+}
+
+.dropdown-menu.show {
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.31) 0px 0px 1px;
+  left: 10px !important;
+  top: -20px !important;
+  width: 170px;
+}
+
+.dropdown-menu.show .list-unstyled {
+  margin-bottom: 0;
+}
+
+.dropdown-menu.show .list-unstyled .list-title {
+  padding: 8px 12px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  text-transform: uppercase;
+  line-height: 1;
+  font-size: 11px;
+  color: #6b778c;
+}
+
+.dropdown-menu.show .list-unstyled .list-item {
+  padding: 8px 12px 7px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  cursor: pointer;
+  color: #172b4d;
+  font-size: 13px;
+}
+
+.dropdown-menu.show .list-unstyled .list-item a {
+  color: #42526E;
+}
+
+.dropdown-menu.show .list-unstyled .list-item a:hover {
+  text-decoration: none;
+}
+
+.dropdown-menu.show .list-unstyled .list-item:hover {
+  text-decoration: none;
+  background-color: #EBECF0;
+}
+
+.dashboard-sub-sidebar .slideout {
+  cursor: pointer;
+}
+
+.dashboard-sub-sidebar .slideout:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  border-radius: 50%;
+  margin: auto;
+  font-size: 18px;
+  background-color: #0368ff;
+}
+
+.search-block {
+  display: none;
+  background: white;
+  position: absolute;
+  width: 600px;
+  height: 100vh;
+  top: 0;
+  padding: 30px 17px 25px 17px;
+  z-index: 2;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+.block-overlay {
+  display: none;
+  background-color: rgba(9, 30, 66, 0.54);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.overlay-active {
+  display: block;
+}
+
+.notification-block {
+  display: none;
+  background: white;
+  position: absolute;
+  width: 600px;
+  height: 100vh;
+  top: 0;
+  padding: 30px 17px 25px 17px;
+  z-index: 2;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+.notification-block .notification-header {
+  display: -webkit-box;
+  display: flex;
+}
+
+.dashboard-sidebar {
+  -webkit-transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+  transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+  width: 250px;
+  height: 100vh;
+  background-color: #0052CC;
+  position: fixed;
+  top: 0;
+  left: 64px;
+  display: block;
+  padding: 15px;
+  color: #FFFFFF;
+}
+
+.dashboard-sidebar .dashboard-sidebar-toggle {
+  position: absolute;
+  right: -15px;
+  border-radius: 50%;
+  top: 35px;
+  z-index: 2;
+}
+
+.dashboard-sidebar .devider {
+  border: 1px solid #05367F;
+  border-radius: 5px;
+}
+
+.dashboard-sidebar .dashboard-sub-content .dashboard-sidebar-link:hover {
+  text-decoration: none;
+}
+
+.dashboard-sidebar .dashboard-sub-content .dashboard-sidebar-link li:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  background: #0368ff;
+}
+
+.dashboard-sidebar .dashboard-sub-content .dashboard-sidebar-link.slideout-item .dashboard-sidebar-listitem:after {
+  display: none;
+  font-family: "Font Awesome 5 Pro";
+  content: "\F0A9";
+  font-weight: 800;
+  position: absolute;
+  right: 20px;
+  font-size: 18px;
+}
+
+.dashboard-sidebar .dashboard-sub-content .dashboard-sidebar-link.slideout-item .dashboard-sidebar-listitem:hover:after {
+  display: block;
+}
+
+.dashboard-sidebar .dashboard-sub-content .sidebar-sub-heading {
+  padding-left: 12px;
+  text-transform: uppercase;
+  padding-right: 12px;
+  line-height: 1.5;
+  font-weight: 600;
+}
+
+.dashboard-sidebar .dashboard-sub-content .sidebar-sub-heading h6 {
+  font-size: 12px;
+}
+
+.dashboard-sidebar-listitem {
+  position: relative;
+  padding-left: 12px;
+  padding-right: 12px;
+  color: #FFFFFF;
+  border-radius: 4px;
+  height: 40px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  font-size: 14px;
+}
+
+.dashboard-sidebar-listitem.active {
+  background-color: #05367F;
+}
+
+.dashboard-sidebar-listitem .dashboard-listitem-arrow {
+  display: none;
+  position: absolute;
+  right: 0;
+  margin-right: 12px;
+}
+
+.dashboard-sidebar-listitem i {
+  font-size: 20px;
+  width: 24px;
+  height: 24px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  margin-right: 16px;
+}
+
+.dashboard-sidebar-brand {
+  display: block;
+  padding: 20px 20px 20px;
+  height: 86px;
+  color: #FFFFFF;
+}
+
+.dashboard-sidebar-slideout {
+  display: none;
+  -webkit-transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+  transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+  width: 250px;
+  height: 100vh;
+  background-color: #0052CC;
+  position: fixed;
+  top: 0;
+  left: 64px;
+  padding: 15px;
+  color: #FFFFFF;
+  z-index: 2;
+}
+
+.slideout-block-content {
+  margin-left: 64px;
+}
+
+#dashboard-sidebar.dashboard-sidebar-active {
+  -webkit-transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+  transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+  padding: 10px;
+  width: 0;
+}
+
+#dashboard-sidebar.dashboard-sidebar-active .dashboard-sidebar-brand {
+  display: none;
+}
+
+#dashboard-sidebar.dashboard-sidebar-active .dashboard-sub-content {
+  display: none;
+}
+
+#dashboard-sidebar.dashboard-sidebar-active .dashboard-sidebar-toggle {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.notification-dot {
+  position: absolute;
+  font-size: 11px;
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  border-radius: 50%;
+  top: 3px;
+  right: 22px;
+}
+
+.card-shadow {
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+}
+
+.content-container {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin-left: 364px;
+  margin-right: 64px;
+  margin-top: 40px;
+}
+
+#content-container.content-container-active {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin-left: 164px;
+}
+
+.create-project-overlay {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  z-index: 7;
+  position: absolute;
+  top: 0;
+}
+
+.create-project-overlay .close-create-project {
+  position: absolute;
+  font-size: 21px;
+  color: #42526E;
+  left: 20px;
+  top: 20px;
+}
+
+.create-project-container {
+  max-width: 1200px;
+  height: 100vh;
+  margin: 0px auto;
+  display: -webkit-box;
+  display: flex;
+}
+
+.create-project-container .project-illustration-block {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
+.create-project-container .create-project-block {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
+.create-project-container .create-project-block .project_extras a {
+  color: #000000;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  height: 30px;
+  position: relative;
+  width: 100%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+}
+
+.create-project-container .create-project-block .project_extras a i {
+  font-size: 28px;
+  position: absolute;
+  right: 0;
+}
+
+.create-project-container .create-project-block .project_extras a[aria-expanded="true"] i {
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.project-card .card {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  border: none;
+  color: black;
+}
+
+.project-card:hover {
+  text-decoration: none;
+}
+
+.project-card:hover .card {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  border: none;
+  background-color: rgba(5, 55, 125, 0.1);
+}
+
+.pricing-card {
+  width: 100%;
+}
+
 @font-face {
   font-family: 'Noto Sans Regular';
   src: url(/fonts/NotoSansTC-Regular.otf?8b34790154f7ba7b9d229207c4a2f356);
