--- a/resources/sass/theme.sass
+++ b/resources/sass/theme.sass
@@ -7,3 +7,5 @@
 @import "components/buttons"
 @import "components/forms"
 @import "components/cards"
+@import "components/sidebar"
+@import "components/content"
