Added feature to add Project

--- a/resources/sass/components/_content.sass
+++ b/resources/sass/components/_content.sass
@@ -25,6 +25,7 @@
     z-index: 7
     position: absolute
     top: 0
+    left: 0
     .close-create-project
         position: absolute
         font-size: 21px
