--- a/resources/sass/base/typography.sass
+++ b/resources/sass/base/typography.sass
@@ -1,9 +1,15 @@
 @import "variables"
 
-h1,h2,h3,h4
+h1,h2
     color: $visual_primary_heading-color
     font-weight: 800
     font-family: 'Noto Sans Regular', 'sans-serif'
+
+h3
+    font-size: 1.5rem
+
+h4
+    font-size: 1.2rem
 
 h5,h6
     font-size: 1rem
@@ -12,7 +18,7 @@ h5,h6
 
 p
     color: $visual_primary_text-color
-    font-weight: 600
+    font-weight: normal
     font-family: 'Open Sans', 'sans-serif'
 
 a
@@ -28,3 +34,7 @@ small
 
 .text-blue
     color: $visual_primary_main
+
+.sub-text
+    color: #D1D1D1
+    font-size: 14px
